Adjustments to the lexer.
Now allows lexing one token at a time.
Allows parsing only a portion of the string.
Uses flex prefix option.
Minimize visible symbols.

--- a/Frontend/CMakeLists.txt
+++ b/Frontend/CMakeLists.txt
@@ -10,7 +10,7 @@ target_include_directories(msl_frontend PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/src)
 find_program(FLEX_EXE flex)
 if (FLEX_EXE)
 	add_custom_command(OUTPUT ${CMAKE_CURRENT_SOURCE_DIR}/${flexOutput}
-		COMMAND ${FLEX_EXE} ARGS -o ${flexOutput} -R ${flexSource}
+		COMMAND ${FLEX_EXE} ARGS -o ${flexOutput} -R --prefix=msl ${flexSource}
 		WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}
 		DEPENDS ${flexSource}
 		COMMENT "Generating lexer..." VERBATIM)
