--- a/Compile/test/CMakeLists.txt
+++ b/Compile/test/CMakeLists.txt
@@ -14,10 +14,10 @@ add_custom_command(TARGET msl_compile_test POST_BUILD
 	${CMAKE_CURRENT_SOURCE_DIR}/outputs $<TARGET_FILE_DIR:msl_compile_test>/outputs
 	COMMENT "Copying test outputs." VERBATIM)
 
-target_include_directories(msl_compile_test PRIVATE ${GTEST_INCLUDE_DIRS} ../src)
-target_link_libraries(msl_compile_test PRIVATE
-	msl_compile
-	${GTEST_BOTH_LIBRARIES})
+target_include_directories(msl_compile_test
+	PRIVATE ${GTEST_INCLUDE_DIRS} ${Boost_INCLUDE_DIRS} ${GLSLANG_DIR} ${SPIRV_CROSS_DIR} ../src)
+target_link_libraries(msl_compile_test
+	PRIVATE msl_compile ${GTEST_BOTH_LIBRARIES})
 
 set_folder(msl_compile_test tests)
 add_test(NAME MSLCompileTest COMMAND msl_compile_test)
