--- a/doc/CMakeLists.txt
+++ b/doc/CMakeLists.txt
@@ -4,7 +4,7 @@ endif()
 
 set(rootDir ${CMAKE_CURRENT_SOURCE_DIR}/..)
 
-set(docSource "\"${rootDir}/Shared/include\" \"${rootDir}/README.md\"")
+set(docSource "\"${rootDir}/Shared/include\" \"${rootDir}/README.md\" \"${rootDir}/tools/README.md\"")
 set(includeDirs ${rootDir}/Shared/include)
 set(dependencies ${rootDir}/Shared/include/MSL/Config.h)
 foreach (docProject ${MSL_DOC_PROJECTS})
