Added mslb-extract tool.

--- a/doc/CMakeLists.txt
+++ b/doc/CMakeLists.txt
@@ -6,7 +6,8 @@ set(rootDir ${CMAKE_CURRENT_SOURCE_DIR}/..)
 
 set(docSource "\"${rootDir}/Shared/include\" \"${rootDir}/README.md\" \"${rootDir}/tools/README.md\"")
 set(includeDirs ${rootDir}/Shared/include)
-set(dependencies ${rootDir}/Shared/include/MSL/Config.h)
+set(dependencies ${rootDir}/Shared/include/MSL/Config.h ${rootDir}/README.md
+	${rootDir}/tools/README.md)
 foreach (docProject ${MSL_DOC_PROJECTS})
 	set(thisDir ${rootDir}/${docProject})
 	set(docSource "${docSource} \"${thisDir}/include\" \"${thisDir}/README.md\"")
