Decorate cmake functions.
Functions are always global scope, so can conflict with other projects.
Also update submodules and excplicitly reference boost recursive
dependencies.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -72,4 +72,4 @@ endif()
 # Documentation. (populated by built libraries)
 add_subdirectory(doc)
 
-install_master_config()
+msl_install_master_config()
