--- a/tools/mslc/CMakeLists.txt
+++ b/tools/mslc/CMakeLists.txt
@@ -1,7 +1,7 @@
 if (NOT MSL_SHARED)
 	set(Boost_USE_STATIC_LIBS ON)
 endif()
-find_package(Boost COMPONENTS program_options)
+find_package(Boost COMPONENTS system program_options)
 
 file(GLOB_RECURSE sources *.cpp *.h)
 add_executable(mslc ${sources})
@@ -9,7 +9,7 @@ add_executable(mslc ${sources})
 target_include_directories(mslc PRIVATE ${Boost_INCLUDE_DIRS})
 target_link_libraries(mslc PRIVATE msl_compile ${Boost_LIBRARIES})
 
-set_folder(mslc tools)
+msl_set_folder(mslc tools)
 
 install(TARGETS mslc RUNTIME DESTINATION bin COMPONENT tools)
 
