--- a/doc/CMakeLists.txt
+++ b/doc/CMakeLists.txt
@@ -25,6 +25,6 @@ add_custom_command(OUTPUT ${outputFile}
 	COMMENT "Generating API documentation with Doxygen" VERBATIM)
 add_custom_target(doc ALL DEPENDS ${outputFile})
 
-set_folder(doc "")
+msl_set_folder(doc "")
 
 install(DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/html DESTINATION share/doc/MSL)
