--- a/tools/mslb-extract/CMakeLists.txt
+++ b/tools/mslb-extract/CMakeLists.txt
@@ -1,7 +1,7 @@
 if (NOT MSL_SHARED)
 	set(Boost_USE_STATIC_LIBS ON)
 endif()
-find_package(Boost COMPONENTS program_options filesystem)
+find_package(Boost COMPONENTS system program_options filesystem)
 
 file(GLOB_RECURSE sources *.cpp *.h)
 add_executable(mslb-extract ${sources})
@@ -9,6 +9,6 @@ add_executable(mslb-extract ${sources})
 target_include_directories(mslb-extract PRIVATE ${Boost_INCLUDE_DIRS})
 target_link_libraries(mslb-extract PRIVATE msl_client ${Boost_LIBRARIES})
 
-set_folder(mslb-extract tools)
+msl_set_folder(mslb-extract tools)
 
 install(TARGETS mslb-extract RUNTIME DESTINATION bin COMPONENT tools)
