Added option to disable installation.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -18,6 +18,7 @@ set(MSL_EXPORTS_DIR ${CMAKE_BINARY_DIR}/cmake CACHE PATH
 	"Folder for placing the cmake exports while building. Useful when embedding in other projects.")
 set(MSL_ROOT_FOLDER MSL CACHE STRING
 	"Root folder for the MSL projects. Usefull when embedding in other projects.")
+set(MSL_INSTALL TRUE CACHE BOOL "Allow installation for MSL components.")
 
 if (MSL_BUILD_TESTS)
 	find_package(GTest QUIET)
