Allow for block inputs/outputs separate from members.
Allow the input/output location to be set on the block rather than the
members. This fixes the fact that glslang no longer redundantly creates
member locations.

Also update submodules and flatbuffers to latest versions.

--- a/Compile/CMakeLists.txt
+++ b/Compile/CMakeLists.txt
@@ -30,8 +30,7 @@ file(GLOB_RECURSE glslangSources
 	${GLSLANG_DIR}/glslang/MachineIndependent/*.cpp ${GLSLANG_DIR}/glslang/GenericCodeGen/*.cpp
 	${GLSLANG_DIR}/glslang/Public/*.h ${GLSLANG_DIR}/glslang/Include/*.h
 	${GLSLANG_DIR}/OGLCompilersDLL/*.cpp ${GLSLANG_DIR}/OGLCompilersDLL/*.h
-	${GLSLANG_DIR}/SPIRV/*.cpp ${GLSLANG_DIR}/SPIRV/*.h
-	${GLSLANG_DIR}/hlsl/*.cpp ${GLSLANG_DIR}/hlsl/*.h)
+	${GLSLANG_DIR}/SPIRV/*.cpp ${GLSLANG_DIR}/SPIRV/*.h)
 set(glslResourceSources
 	${GLSLANG_DIR}/StandAlone/ResourceLimits.cpp ${GLSLANG_DIR}/StandAlone/ResourceLimits.h)
 file(GLOB spirvCrossSources ${SPIRV_CROSS_DIR}/spirv_*.cpp ${SPIRV_CROSS_DIR}/spirv_*.hpp)
