Added pre-header-line config option.

--- a/tools/mslc/test/glsl-disable.conf
+++ b/tools/mslc/test/glsl-disable.conf
@@ -3,5 +3,5 @@ version = 430
 define = GLSL
 define = CUSTOM_DEFINE1 = 1
 define = CUSTOM_DEFINE2=2
-define = DISABLE_UNIFORM_BLOCKS
+pre-header-line = @define DISABLE_UNIFORM_BLOCKS
 force-disable = UniformBlocks
