Update glslang and SPIRV-cross.
Use the auto map bindings and locations options on glslang when compiling.
Switch back to the the official Khronos version of glslang, since I didn't
originally notice there was an option to disable the error checking when
creating the fork. Telling glslang to use auto mappings doesn't do anything
unless you call mapIO(), so this doesn't interfere with my own mappings or
having bindings configurable at runtime.

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,6 @@
 [submodule "glslang"]
 	path = Compile/glslang
-	url = https://github.com/akb825/glslang.git
+	url = https://github.com/KhronosGroup/glslang.git
 [submodule "SPIRV-Cross"]
 	path = Compile/SPIRV-Cross
 	url = https://github.com/KhronosGroup/SPIRV-Cross
