GCC 4.8 compile fixes.
Also properly fail CMake configuration if boost isn't found.

--- a/Client/test/CMakeLists.txt
+++ b/Client/test/CMakeLists.txt
@@ -5,7 +5,8 @@ endif()
 if (NOT MSL_SHARED)
 	set(Boost_USE_STATIC_LIBS ON)
 endif()
-find_package(Boost COMPONENTS system filesystem)
+find_package(Boost COMPONENTS system filesystem REQUIRED)
+find_package(Threads)
 
 file(GLOB_RECURSE sources *.cpp *.h)
 add_executable(msl_client_test ${sources})
@@ -17,7 +18,7 @@ add_custom_command(TARGET msl_client_test POST_BUILD
 
 target_include_directories(msl_client_test PRIVATE ${GTEST_INCLUDE_DIRS} ${Boost_INCLUDE_DIRS})
 target_link_libraries(msl_client_test
-	PRIVATE msl_client ${GTEST_BOTH_LIBRARIES} ${Boost_LIBRARIES})
+	PRIVATE msl_client ${GTEST_BOTH_LIBRARIES} ${Boost_LIBRARIES} ${CMAKE_THREAD_LIBS_INIT})
 
 msl_set_folder(msl_client_test tests)
 add_test(NAME MSLClientTest COMMAND msl_client_test)
