--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -36,8 +36,11 @@ endif()
 
 # This will try to find the include directory on the system, and fall back to the version checked
 # into the repository.
-find_path(FLATBUFFERS_INCLUDE_DIRS flatbuffers/flatbuffers.h
-	PATHS ${CMAKE_CURRENT_SOURCE_DIR}/Shared/external)
+find_path(FLATBUFFERS_INCLUDE_DIRS flatbuffers/flatbuffers.h)
+if (NOT FLATBUFFERS_INCLUDE_DIRS)
+	set(FLATBUFFERS_INCLUDE_DIRS ${CMAKE_CURRENT_SOURCE_DIR}/Shared/external CACHE PATH
+		"FlatBuffers include directory" FORCE)
+endif()
 
 set_property(GLOBAL PROPERTY USE_FOLDERS ON)
 
