--- a/tools/mslb-extract/CMakeLists.txt
+++ b/tools/mslb-extract/CMakeLists.txt
@@ -8,6 +8,8 @@ add_executable(mslb-extract ${sources})
 
 target_include_directories(mslb-extract PRIVATE ${Boost_INCLUDE_DIRS})
 target_link_libraries(mslb-extract PRIVATE msl_client ${Boost_LIBRARIES})
+target_compile_definitions(mslb-extract PRIVATE MSL_MAJOR_VERSION=${MSL_MAJOR_VERSION}
+	MSL_MINOR_VERSION=${MSL_MINOR_VERSION} MSL_PATCH_VERSION=${MSL_PATCH_VERSION})
 
 msl_set_folder(mslb-extract tools)
 
