--- a/tools/mslc/CMakeLists.txt
+++ b/tools/mslc/CMakeLists.txt
@@ -8,6 +8,8 @@ add_executable(mslc ${sources})
 
 target_include_directories(mslc PRIVATE ${Boost_INCLUDE_DIRS})
 target_link_libraries(mslc PRIVATE msl_compile ${Boost_LIBRARIES})
+target_compile_definitions(mslc PRIVATE MSL_MAJOR_VERSION=${MSL_MAJOR_VERSION}
+	MSL_MINOR_VERSION=${MSL_MINOR_VERSION} MSL_PATCH_VERSION=${MSL_PATCH_VERSION})
 
 msl_set_folder(mslc tools)
 
